__header__([Octave News Archive], [logo])

<div class="content">

<dl>
    <dt>June 8, 2012</dt>
    <dd>
      <a href="http://planet.octave.org">Planet Octave</a> is up,
      which is a collection of blogs related to Octave. At the moment,
      it's principally dedicated to the blogs from students working
      under Google Summer of Code.
    </dd>
    <dt>May 31, 2012</dt>
    <dd>Version 3.6.2 has been released and is now available
      for <a href="download.html">download</a>. Octave 3.6.2 is a
      minor bug-fixing release. See
      the <a href="NEWS-3.6.html">NEWS</a> file for a list of
      user-visible changes since 3.4.
    </dd>
    <dt>April 23, 2012</dt>
    <dd>
      Octave will be participating
      in <a href="http://www.google-melange.com/gsoc/homepage/google/gsoc2012">Google
      Summer of Code 2012</a> with three students. Congratulations to
      Max Brister, Jacob Dawid, and Benjamin Lewis who will be working
      respectively on JIT compiling, finishing our native GUI, and
      least squares spectral analysis.
    </dd>
    <dt>February 22, 2012</dt>
    <dd>Version 3.6.1 has been released and is now available
      for <a href="download.html">download</a>.  Octave 3.6.1 is a
      major new release.  See the <a href="NEWS-3.6.html">NEWS</a>
      file for a list of user-visible changes.
    </dd>
<dt>February 1, 2012</dt>
<dd><a href="http://www.octave.org/wiki/index.php?title=OctConf_2012">OctConf
2012</a> will take place during July 16-20 2012. All Octave users and
developers invited!</dd> 
<dt>October 10, 2011</dt>
<dd>Version 3.4.3 has been released and is now available for ftp.
Octave 3.4.3 is a bug fixing release.</dd>
    <dt>August 15, 2011</dt>
    <dd>Following <a href="http://octave.1599824.n4.nabble.com/Code-Sprint-Results-td3672698.html">the
        success</a> of the first sprint, we will be having a second sprint on
      September 3, 2011. The details are again at
      <a href="sprint.html">Code Sprints</a>.