@@ -122,6 +122,17 @@
   <h1>News</h1>
 
   <dl>
+    <dt>July 18, 2012</dt>
+    <dd>
+      Octave has
+      been <a href="http://sophia.estec.esa.int/socis2012/?q=node/13">accepted
+      into SOCIS</a>. We're now hiring for one position!
+    </dd>
+    <dt>July 16, 2012</dt>
+    <dd>
+      <a href="http://www.octave.org/wiki/index.php?title=OctConf_2012">OctConf
+      2012</a> is currently underway.
+    </dd>
     <dt>June 8, 2012</dt>
     <dd>
       <a href="http://planet.octave.org">Planet Octave</a> is up,
@@ -150,15 +161,6 @@
       for <a href="download.html">download</a>.  Octave 3.6.1 is a
       major new release.  See the <a href="NEWS-3.6.html">NEWS</a>
       file for a list of user-visible changes.
-    </dd>
-    <dt>February 1, 2012</dt>
-    <dd><a href="http://www.octave.org/wiki/index.php?title=OctConf_2012">OctConf
-        2012</a> will take place during July 16-20 2012. All Octave users and
-      developers invited!
-    </dd>
-    <dt>October 10, 2011</dt>
-    <dd>Version 3.4.3 has been released and is now available for ftp.
-      Octave 3.4.3 is a bug fixing release.
     </dd>
   </dl>
 
